--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@ body {
 }
 
 h1 {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-family: Courier;
     text-align: center; 
     margin-bottom: 5;
     font-size: 500%
